--- a/res/css/news.css
+++ b/res/css/news.css
@@ -526,7 +526,7 @@
     }
     
     .articleInfoBar {	/* Make it responsive!*/
-        font-size: 14px;
+		padding: 0 16px;
     }
     
     .article-content {
@@ -595,11 +595,31 @@
 		line-height: 24px;
 		padding-top: 12px;
 		box-sizing: border-box;
+		height: 48px;
+		font-size: 13px;
 	}
 	
-	.article-info a.news_tags {
-		border: none;
-		font-size: 12px;
+	.articleInfoBarRightContainer .articleInfoLikesBtn {
+		margin-top: -3px;
+	}
+	
+	.articleInfoBarRightContainer {
+		background: white;
+		position: absolute;
+		right: 8px;
+		top: 80px;
+		padding: 4px;
+		border-radius: 2px;
+		box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+		padding-top: 8px;
+		padding-left: 12px;
+	}
+	
+	.articleInfoTags {
+		width: 100%;
+		margin-bottom: 4px;
+		padding: 4px 0;
+		box-sizing: border-box;
 	}
 	
 }
