--- a/res/css/home.css
+++ b/res/css/home.css
@@ -128,46 +128,32 @@ body {
 
 .featuredNewsBanner {
 	max-width: 940px;
+	width: 100%;
 	margin: 0 auto;
 	margin-top: 88px;
-	height: 230px;
-	border-radius: 6px;
-	margin-bottom: 4px;
-	box-shadow: 0 1px 1px rgba(0,0,0,.15);
 	position: relative;
+	padding: 52px;
 	background-size: cover;
 	background-position-y: center;
 	margin-bottom: 10px;
+	border-radius: 6px;
+	box-shadow: 0 1px 1px rgba(0,0,0,.15);
+	box-sizing: border-box;
 }
 
 .featuredNewsSubcontainer {
 	z-index: 9;
+	position: relative;
+}
+
+.featuredBannerColorOverlay {
+	background: rgba(156, 39, 176, 0.44);
+	height: 100%;
+	width: 100%;
 	position: absolute;
-	margin-top: 52px;
-	margin-left: 52px;
-	max-width: 100%;
-	margin-right: 52px;
-	margin-bottom: 52px;
-	height: 126px;
-	width: calc(100% - 104px);
-}
-
-.featuredNewsSubcontainer h1 {
-    color: #fff;
-    font-size: 34px;
-    margin: 0;
-    padding: 0;
-    font-weight: 400;
-    line-height: 44px;
-}
-
-.featuredNewsSubcontainer p {
-    color: rgba(255, 255, 255, 0.64);
-    font-size: 16px;
-    line-height: 28px;
-    max-width: 500px;
-    margin-top: 10px;
-    margin-bottom: 0;
+	top: 0;
+	left: 0;
+	border-radius: 6px;
 }
 
 .featuredNewsSubcontainer a {
@@ -175,15 +161,25 @@ body {
 	text-decoration: none;
 }
 
-.bannerFeaturedButton {
-	text-align: right;
-	position: absolute;
-	bottom: -26px;
-	right: -26px;
+.featuredNewsSubcontainer h1 {
+	color: #fff;
+	font-size: 34px;
+	margin: 0;
+	padding: 0;
+	font-weight: 400;
+	line-height: 44px;
 }
 
-.bannerFeaturedButton a {
-	color: transparent;
+.featuredNewsSubcontainer p {
+	color: rgba(255, 255, 255, 0.64);
+	font-size: 16px;
+	max-width: 500px;
+	margin-top: 14px;
+	margin-bottom: 0;
+}
+
+.bannerFeaturedButton {
+	text-align: right;
 }
 
 .bannerFeaturedButton a.featuredLink div {
@@ -206,18 +202,9 @@ body {
 }
 
 .bannerFeaturedButton a.featuredLink div:hover {
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-    cursor: pointer;
-    background: #26C6DA;
-}
-
-.featuredBannerColorOverlay {
-	background: rgba(156, 39, 176, 0.44);
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	top: 0;
-	border-radius: 6px;
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+	cursor: pointer;
+	background: #26C6DA;
 }
 
 
@@ -473,6 +460,10 @@ body {
 		width: 96%;
 	}
 	
+	.featuredNewsBanner {
+		margin-top: 84px;
+	}
+	
 	.tagSelectMenu {
 		right: 26px;
 		text-align: right;
@@ -482,9 +473,13 @@ body {
 
 @media screen and (max-width: 840px) {
 	
+	.featuredNewsBanner {
+		margin-top: 72px;
+	}
+	
 	.featuredNewsSubcontainer h1 {
-		font-size: 24px;
-		line-height: 34px;
+		font-size: 26px;
+		line-height: 36px;
 	}
 	
 	.news-col {
@@ -500,20 +495,18 @@ body {
 		height: 320px;
 	}
 	
-	.featuredNewsBanner {
-		margin-top: 72px;
-		height: 252px;
-	}
-	
 	.topBannerContentContainer {
 		margin-top: 44px;
 		margin-left: 44px;
 		max-width: 88%;
 	}
 	
-	.featuredNewsSubcontainer {
-		margin: 44px;
-		width: calc(100% - 88px);
+	.featuredNewsBanner {
+		padding: 44px;
+	}
+	
+	.bannerFeaturedButton {
+		margin-top: 8px;
 	}
 	
 	.topBannerContentContainer h1 {
@@ -526,10 +519,6 @@ body {
 		line-height: 24px;
 	}
 	
-	.bannerFeaturedButton {
-		bottom: -62px;
-	}
-	
 }
 
 @media screen and (max-width: 480px) {
@@ -540,23 +529,21 @@ body {
 	}
 	
 	.featuredNewsBanner {
+		padding: 24px;
 		margin-top: 68px;
-		height: 224px;
-	}
-	
-	.featuredNewsSubcontainer {
-		margin: 24px;
-		width: calc(100% - 48px);
-		height: calc(100% - 48px);
-	}
-	
-	.bannerFeaturedButton {
-		right: 0;
-		bottom: 0;
 	}
 	
 	.featuredBannerColorOverlay {
 		background: rgba(156, 39, 176, 0.64);
+	}
+	
+	.featuredNewsSubcontainer h1 {
+		font-size: 24px;
+		line-height: 34px;
+	}
+	
+	.bannerFeaturedButton {
+		margin-top: 12px;
 	}
 	
 	.bannerCtaButtons {
@@ -580,18 +567,14 @@ body {
 
 @media screen and (max-width: 400px) {
 	
-	.featuredNewsBanner {
-		height: 200px;
-	}
-	
 	.topBannerContentContainer h1 {
 		font-size: 24px;
 		line-height: 32px;
 	}
 	
 	.featuredNewsSubcontainer h1 {
-		font-size: 20px;
-		line-height: 28px;
+		font-size: 22px;
+		line-height: 32px;
 	}
 	
 	.topBannerContentContainer p {
