--- a/res/css/profile.css
+++ b/res/css/profile.css
@@ -1,7 +1,7 @@
 
 
 
-/* ========== Main Styles ========== */
+/* ========== Main Styles (Complements from style.css) ========== */
 
 
 html {
@@ -19,232 +19,24 @@ body {
 
 
 
-/* ========== Profile header ========== */
-
-
-.profileHeaderContainer {
-	background: #6472cd;
-	height: 150px;
-	margin-top: 64px;
-	position: relative;
-	box-sizing: border-box;
-}
-
-.profileInfoContainer {
-	height: 102px;
-	width: 100%;
-	max-width: 440px;
-	margin: 0 auto;
-	
-}
-
-.profileInfoLeft,
-.profileInfoRight {
-	height: 100%;
-	float: left;
-}
-
-.profileInfoLeft {
-	width: 72%;
-	position: relative;
-}
-
-.profileInfoRight {
-	width: 28%;
-	text-align: center;
-}
-
-.profileInfoRight img {
-	width: 64px;
-	height: 64px;
-	border-radius: 50%;
-	border: 2px solid #fff;
-	margin-top: 16px;
-}
-
-.profileName {
-	font-size: 24px;
-	color: rgba(255, 255, 255, 0.72);
-	padding: 0 16px;
-	padding-top: 24px;
-}
-
-i.material-icons.profileMenuIcon {
-	font-size: 22px;
-	color: rgba(0, 0, 0, 0.24);
-	display: inline-block;
-	vertical-align: sub;
-	margin-left: 22px;
-	-webkit-transition: all 150ms ease-in-out;
-	-moz-transition: all 150ms ease-in-out;
-	-ms-transition: all 150ms ease-in-out;
-	-o-transition: all 150ms ease-in-out;
-	transition: all 150ms ease-in-out;
-}
-
-i.material-icons.profileMenuIcon:hover {
-	cursor: pointer;
-	background: rgba(255, 255, 255, 0.1);
-	border-radius: 20px;
-	color: rgba(0, 0, 0, 0.32);
-}
-
-.profileUserStatus {
-	font-size: 14px;
-	color: rgba(255, 255, 255, 0.36);
-	padding: 0 16px;
-	padding-top: 4px;
-}
-
-
-/* Profile option menu*/	/* Move to main css file for better modularity? */
-
-.profileOptionMenuMain {
-	position: absolute;
-	z-index: 999;
-	background: white;
-	top: 24px;
-	padding: 8px 0;
-	max-height: 340px;
-	min-width: 168px;
-	overflow: auto;
-	border-radius: 2px;
-	box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-	display: none;
-	right: 48px;
-	text-align: left;
-}
-
-.profileOptionMenuMain a {
-	text-decoration: none;
-	color: rgba(0, 0, 0, 0.84);
-}
-
-.profileOptionsOption {
-	height: 48px;
-	padding: 0 24px;
-	font-size: 16px;
-	color: rgba(0, 0, 0, 0.84);
-	box-sizing: border-box;
-	line-height: 48px;
-	cursor: pointer;
-}
-
-.profileOptionsOption:hover {
-	background: #eee;
-}
-
-
-
 /* ========== Profile content ========== */
 
 
-/* Tabs */
+/* Profile section */
 
-.fixTheTabs {
-	width: 100%;
-	background: #6472cd;
-	z-index: 99;
-}
-
-.fixTheTabs.tabFixed {
-	position: fixed;
-	top: 64px;
-}
-
-.tab-wrap {
-	width: 940px;
-	margin: 0 auto;
-	position: relative;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-}
-
-input[type="radio"][name="tabs"] {
-	position: absolute;
-	z-index: -999;
-}
-
-input[type="radio"][name="tabs"]:checked + .tab-label-content label {
-	color: white;
-}
-
-input[type="radio"][name="tabs"]:nth-of-type(1):checked ~ .slide {
-	left: calc((100% / 4) * 0);
-}
-
-input[type="radio"][name="tabs"]:nth-of-type(2):checked ~ .slide {
-	left: calc((100% / 4) * 1);
-}
-
-input[type="radio"][name="tabs"]:nth-of-type(3):checked ~ .slide {
-	left: calc((100% / 4) * 2);
-}
-
-input[type="radio"][name="tabs"]:nth-of-type(4):checked ~ .slide {
-	left: calc((100% / 4) * 3);
-}
-
-input[type="radio"][name="tabs"]:first-of-type:checked ~ .slide {
-	left: 0;
-}
-
-.tab-wrap label {
-	cursor: pointer;
-	color: rgba(255, 255, 255, 0.7);
-	background-color: #6472cd;
-	box-sizing: border-box;
-	display: -webkit-inline-box;
-	display: -ms-inline-flexbox;
-	display: inline-flex;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	text-align: center;
-	height: 48px;
-	-webkit-transition: color 0.2s ease;
-	transition: color 0.2s ease;
-	width: 100%;
-	text-transform: uppercase;
-	font-size: 14px;
-	font-weight: 500;
-}
-
-.slide {
-	background: #FFC107;
-	width: calc(100% / 4);
-	height: 2px;
-	position: absolute;
-	left: 0;
-	top: calc(100% - 2px);
-	-webkit-transition: left 0.3s ease-out;
-	transition: left 0.3s ease-out;
-}
-
-.tab-label-content {
-	width: 100%;
-}
-
-/* Tabs content */
-
-.tabContentContainer {
+.mainContentContainer {
 	width: 100%;
 	max-width: 940px;
 	margin: 0 auto;
+	margin-top: 64px;
 	min-height: 100%;
 	box-sizing: border-box;
 	padding-top: 16px;
 }
 
-
-/* Tab 1 */
-
 .feedHighlightsSection,
-.feedTrendingSection {
+.feedTrendingSection,
+.feedLatestSection {
 	min-height: 200px;
 	margin-bottom: 32px;
 }
@@ -295,9 +87,9 @@ input[type="radio"][name="tabs"]:first-of-type:checked ~ .slide {
 }
 
 
-/* Tab 1 */
+/* contribuite */
 
-.contributorPanelMain {
+/*.contributorPanelMain {
 	width: 100%;
 	height: 52px;
 	position: relative;
@@ -394,10 +186,10 @@ input[type="radio"][name="tabs"]:first-of-type:checked ~ .slide {
 .contributorPanelMain .newArticleBtn div:hover {
 	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 	background: #00BCD4;
-}
+}*/
 
 
-/* News cards */
+/* News cards */	/* <==== Create new file for the mews card css. */
 
 .news-card {
 	background: #fff;
