--- a/res/css/style.css
+++ b/res/css/style.css
@@ -36,6 +36,12 @@ body {
     background-color: #fff;
 }
 
+.headerSeparatorFIx {
+	height: 64px;
+	width: 100%;
+	background: none;
+}
+
 
 /* Disable selection with class "noUserSelect" */
 
@@ -153,14 +159,14 @@ body {
 /* ========== Page header (Top bar) ========== */
 
 .page-header {
-    width: 100%;
-    width: 100%;
-    position: fixed;
-    background: #6472cd;
-    top: 0;
-    z-index: 500;
-    height: 64px;
-    max-height: 64px;
+	width: calc(100% - 30px);
+	padding-right: 30px;
+	position: fixed;
+	background: #6472cd;
+	top: 0;
+	z-index: 500;
+	height: 64px;
+	max-height: 64px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
@@ -245,10 +251,6 @@ body {
     display: inline-block;
 }
 
-.header-menu ul li:last-child {
-	margin-right: 30px;
-}
-
 .header-menu ul li:hover {
 	background-color: rgba(0, 0, 0, 0.1);
 }
@@ -306,20 +308,20 @@ body {
 
 /* ========== Profile card (header) ========== */
 
-.header-menu .profileAvatarContainer {
+header .profileAvatarContainer {
 	float: right;
 }
 
-.header-menu ul li.profileAvatarContainer:hover {
+header ul li.profileAvatarContainer:hover {
 	background-color: transparent;
 }
 
-.header-menu .profileAvatar {
+header .profileAvatar {
 	height: 64px;
 	padding-left: 16px;
 }
 
-.header-menu .profilePicture {
+header .profilePicture {
 	height: 44px;
 	width: 44px;
 	border-radius: 100px;
@@ -329,7 +331,7 @@ body {
 	cursor: pointer;
 }
 
-.header-menu .profileAvatarContainer .profileCard {
+header .profileAvatarContainer .profileCard {
 	position: absolute;
 	line-height: initial;
 	background: #fff;
@@ -364,7 +366,6 @@ body {
 
 .profileAvatarContainer .profileCard .profCard-menu {
 	border-bottom: 1px solid #EEEEEE;
-	/*padding: 4px 0;*/
 }
 
 .profileCard .profCard-menu a {
@@ -385,6 +386,11 @@ body {
 }
 
 .profileCard .profCard-options a {
+	font-size: 14px;
+	text-decoration: none;
+	outline: none;
+	padding: 0 24px;
+	box-sizing: border-box;
 	float: left;
 	width: calc(100% / 3);
 	color: rgba(0, 0, 0, 0.64);
@@ -664,6 +670,7 @@ i.searchBarSearchIcon.searchBarIconNotFocus {
     .resp-menu-ico,
     .resp-name-logo {
         display: block;
+		width: fit-content;
     }
     
     .ndroidme-logo {
