--- a/res/css/style.css
+++ b/res/css/style.css
@@ -379,6 +379,11 @@ header .profileAvatarContainer .profileCard {
 	text-transform: none;
 	font-weight: initial;
 	display: block;
+	text-decoration: none;
+}
+
+.profileCard .profCard-menu a.resp-profile-links {
+	display: none;
 }
 
 .profileCard .profCard-menu a:hover {
@@ -682,15 +687,36 @@ i.searchBarSearchIcon.searchBarIconNotFocus {
 	/* header profile card */
 
 	header .profilePicture {
-		height: 42px;
-		width: 42px;
-		margin-top: 7px;
-		margin-right: -20px;
+		display: none;
 	}
 	
 	header .profileAvatarContainer .profileCard {
-		right: 16px;
-		top: 64px;
+		right: 0;
+		top: 0;
+		display: block !important;
+		border-radius: 0;
+		border: none;
+		width: 100%;
+		box-shadow: none;
+	}
+	
+	.profileAvatarContainer .profileCard .profCard-header {
+		padding: 9px 10px;
+	}
+	
+	.profileCard .profCard-menu a.resp-profile-links {
+		display: block;
+	}
+	
+	.profileAvatarContainer .profileCard .profCard-menu {
+		border-bottom: none;
+	}
+	
+	.profileCard .profCard-options {
+		position: fixed;
+		bottom: 0;
+		width: 256px;
+		border-top: 1px solid #EEEEEE;
 	}
     
 	
@@ -727,11 +753,7 @@ i.searchBarSearchIcon.searchBarIconNotFocus {
 	/* header profile card */
 	
 	header .profileAvatarContainer .profileCard {
-		border: none;
-		width: 100%;
-		right: 0;
-		top: 56px;
-		border-radius: 0;
+	
 	}
 	
 	
